--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="back_700">#FF157335</color>
     <color name="black">#FF111111</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#21B052</color>
+    <color name="dark_gray">#5C5C5C</color>
+    <color name="gray">#B7B7B7</color>
+    <color name="light_gray">#E9E9E9</color>
 </resources>
