--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#21B052</color>
+    <color name="dark_gray">#5C5C5C</color>
+    <color name="gray">#B7B7B7</color>
+    <color name="light_gray">#E9E9E9</color>
 </resources>
