--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="any_200">#FFC6C6C6</color>
+    <color name="any_500">#FF777777</color>
+    <color name="any_700">#FF404040</color>
+    <color name="back_200">#FF30FF76</color>
+    <color name="back_500">#FF21B052</color>
+    <color name="back_700">#FF157335</color>
+    <color name="black">#FF111111</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
