--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,39 +47,46 @@
             app:layout_constraintBottom_toBottomOf="@+id/home_et_searchtext"
             app:layout_constraintStart_toEndOf="@+id/home_et_searchtext"
             app:layout_constraintTop_toTopOf="@+id/home_et_searchtext" />
-        <ScrollView
+
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:paddingVertical="4dp"
+            android:layout_height="40dp"
             app:layout_constraintStart_toStartOf="@+id/home_iv_logo"
             app:layout_constraintTop_toBottomOf="@+id/home_iv_logo">
-            <Button
-                android:id="@+id/btn_1"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="식별자"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </ScrollView>
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/btn_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="식별자" />
+                <Button
+                    android:id="@+id/btn_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="제형" />
+                <Button
+                    android:id="@+id/btn_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="모양" />
+                <Button
+                    android:id="@+id/btn_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="색깔" />
+            </LinearLayout>
+        </HorizontalScrollView>
 
 
-        <Button
-            android:id="@+id/btn_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="제형"
-            app:layout_constraintStart_toEndOf="@+id/btn_1"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_1" />
-        <Button
-            android:id="@+id/btn_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="모양"
-            app:layout_constraintStart_toEndOf="@+id/btn_2"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_2" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.tabs.TabLayout
