--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -19,19 +19,19 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ti_id"
+        android:id="@+id/ti_phone_number"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="18dp"
         android:layout_marginTop="24dp"
-        android:hint="@string/input_id"
+        android:hint="@string/input_phone_number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_id"
+            android:id="@+id/input_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -47,7 +47,7 @@
         android:hint="@string/input_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ti_id">
+        app:layout_constraintTop_toBottomOf="@+id/ti_phone_number">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_name"
