--- a/app/src/main/res/layout/fragment_feed_list.xml
+++ b/app/src/main/res/layout/fragment_feed_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.example.yactong.ui.home.ResultsFragment"
+    android:name="com.example.yactong.ui.home.FeedFragment"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.home.ResultsFragment"
-    tools:listitem="@layout/item_results" />
+    tools:context=".ui.home.FeedFragment"
+    tools:listitem="@layout/item_feed" />
