"feat: FormFragment checkbox 단일 선택 기능 구현"

--- a/app/src/main/res/layout/item_recyclerview_form.xml
+++ b/app/src/main/res/layout/item_recyclerview_form.xml
@@ -29,9 +29,11 @@
 
     <CheckBox
         android:id="@+id/cb_medicine_form"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:button="@android:color/transparent"
+        android:background="@drawable/take_checkbox_bg"
+        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
