--- a/app/src/main/res/drawable/bg_btn_login.xml
+++ b/app/src/main/res/drawable/bg_btn_login.xml
@@ -6,7 +6,7 @@
         android:color="@color/white"/>
     <stroke
         android:width="3dp"
-        android:color="@color/teal_700"/>
+        android:color="@color/any_700"/>
     <corners
         android:radius="70dp"/>
 
