--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_name"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -38,6 +39,7 @@
         app:layout_constraintStart_toStartOf="@id/tv_medicine_search">
 
         <ImageView
+            android:id="@+id/iv_medicine_search"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:src="@drawable/medicine_search"
