--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,18 +9,15 @@
     tools:context=".ui.home.HomeFragment">
   
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/home_lo_searchbar"
+        android:id="@+id/search_lo_searchbar"
         android:layout_width="match_parent"
-
-        android:layout_height="64dp"
-        android:background="@color/any_200"
-
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/home_iv_logo"
+            android:id="@+id/search_iv_logo"
             android:layout_width="64dp"
             android:layout_height="64dp"
 
@@ -29,90 +26,73 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/home_et_searchtext"
-            android:layout_width="250dp"
-            android:layout_height="64dp"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/home_iv_logo"
-            app:layout_constraintStart_toEndOf="@+id/home_iv_logo"
-            app:layout_constraintTop_toTopOf="@+id/home_iv_logo" />
-
-        <ImageButton
-            android:id="@+id/home_btn_search"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="45dp"
             android:layout_marginStart="8dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_search_24"
-            app:layout_constraintBottom_toBottomOf="@+id/home_et_searchtext"
-            app:layout_constraintStart_toEndOf="@+id/home_et_searchtext"
-            app:layout_constraintTop_toTopOf="@+id/home_et_searchtext" />
+            android:background="@drawable/shape_searchbar"
+            app:layout_constraintBottom_toBottomOf="@+id/search_iv_logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/search_iv_logo"
+            app:layout_constraintTop_toTopOf="@+id/search_iv_logo">
+
+            <EditText
+                android:id="@+id/search_et_searchtext"
+                android:layout_width="250dp"
+                android:layout_height="40dp"
+                android:hint="검색어를 적어 주세요."
+                android:background="@null"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/search_btn_search"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:background="@android:color/transparent"
+                android:layout_marginStart="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_search_24"
+                app:layout_constraintBottom_toBottomOf="@+id/search_et_searchtext"
+                app:layout_constraintStart_toEndOf="@+id/search_et_searchtext"
+                app:layout_constraintTop_toTopOf="@+id/search_et_searchtext" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <HorizontalScrollView
+            android:id="@+id/search_sv_keywords"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            app:layout_constraintStart_toStartOf="@+id/home_iv_logo"
-            app:layout_constraintTop_toBottomOf="@+id/home_iv_logo">
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="4dp"
+            app:layout_constraintStart_toStartOf="@+id/search_iv_logo"
+            app:layout_constraintTop_toBottomOf="@+id/search_iv_logo">
             <LinearLayout
+                android:id="@+id/search_lo_keyword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <Button
-                    android:id="@+id/btn_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="식별자" />
-                <Button
-                    android:id="@+id/btn_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="제형" />
-                <Button
-                    android:id="@+id/btn_3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="모양" />
-
-                <Button
-                    android:id="@+id/btn_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="색깔" />
-
-                <Button
-                    android:id="@+id/btn_5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="분활선" />
             </LinearLayout>
         </HorizontalScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/home_lo_tab"
+        android:id="@+id/search_lo_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/back_200"
         android:translationZ="1dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/home_lo_searchbar" />
+        app:layout_constraintTop_toBottomOf="@+id/search_lo_searchbar" />
 
     <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/home_vp"
+        android:id="@+id/search_vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/sp_space"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/home_lo_tab" />
+        app:layout_constraintTop_toBottomOf="@id/search_lo_tab" />
 
     <Space
         android:id="@+id/sp_space"
