--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -49,6 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ti_phone_number">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_pw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,7 +80,7 @@
 
     <TextView
         android:id="@id/tv_signup"
-        style="@style/caption"
+        style="@style/body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -100,6 +101,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_signup" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -107,6 +109,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_kakao" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
