--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -19,41 +19,57 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/tv_medicine_search"
+        android:id="@+id/tv_medicine_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="약 이름"
-        style="@style/headline_b"
-        android:layout_marginTop="16dp"
+        android:textColor="@color/dark_gray"
+        style="@style/subtitle_b"
         android:layout_marginStart="10dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_back"
+        app:layout_constraintTop_toTopOf="@id/iv_back"
+        app:layout_constraintBottom_toBottomOf="@id/iv_back"
+        app:layout_constraintStart_toEndOf="@id/iv_back"/>
+
+    <TextView
+        android:id="@+id/tv_medicine_name_explanation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="복용하는 약 종류\n및 이름을 작성하세요"
+        android:maxLines="2"
+        android:textColor="@color/dark_gray"
+        style="@style/subtitle_b"
+        android:layout_marginTop="72dp"
+        android:layout_marginStart="12dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_medicine_name"
         app:layout_constraintStart_toStartOf="@id/iv_back"/>
 
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_medicine_search"
+        android:id="@+id/cl_medicine_name"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="40dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_medicine_search"
-        app:layout_constraintStart_toStartOf="@id/tv_medicine_search">
+        android:layout_marginTop="48dp"
+        android:layout_marginHorizontal="28dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_medicine_name_explanation"
+        app:layout_constraintStart_toStartOf="@id/iv_back">
 
         <ImageView
-            android:id="@+id/iv_medicine_search"
+            android:id="@+id/iv_medicine"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:src="@drawable/medicine_search"
+            android:src="@drawable/medicine"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@id/et_medicine_search"/>
+            app:layout_constraintStart_toStartOf="@id/et_medicine_name"/>
 
 
     <EditText
-        android:id="@+id/et_medicine_search"
+        android:id="@+id/et_medicine_name"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:hint="약 종류나 이름을 작성하세요."
+        android:hint="입력해주세요"
         android:textColorHint="@color/gray"
         android:inputType="text"
         style="@style/body_b"
@@ -70,7 +86,7 @@
             android:src="@drawable/baseline_cancel_24dp"
             android:layout_margin="20dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/et_medicine_search"/>
+            app:layout_constraintEnd_toEndOf="@id/et_medicine_name"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -82,8 +98,6 @@
         style="@style/subtitle_b"
         android:enabled="false"
         android:textColor="@color/dark_gray"
-        android:layout_marginBottom="10dp"
-        android:layout_marginHorizontal="32dp"
         android:background="@drawable/user_cl_bg_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
