--- a/app/src/main/res/layout/item_searchfilter.xml
+++ b/app/src/main/res/layout/item_searchfilter.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="20dp"
+    android:paddingHorizontal="24dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/effect_title"
