"feat : dialog 기능 구현"

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -78,4 +78,9 @@
         parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bottom_sheet_white_20</item>
     </style>
+
+    <style name="NumberPicker">
+        <item name="colorControlNormal">@color/green</item>
+        <item name="android:textColorPrimary">@color/dark_gray</item>
+    </style>
 </resources>
