feat: 프로젝트 이름 변경

--- a/app/src/main/res/layout/fragment_result_list.xml
+++ b/app/src/main/res/layout/fragment_result_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.example.yactong.ui.home.ResultsFragment"
+    android:name="com.blackcows.butakaeyak.ui.home.ResultsFragment"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_marginLeft="16dp"
