--- a/app/src/main/res/layout/fragment_pill_result.xml
+++ b/app/src/main/res/layout/fragment_pill_result.xml
@@ -2,7 +2,7 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/resultlist"
     android:name="com.blackcows.butakaeyak.ui.home.ResultsFragment"
     android:layout_width="match_parent"
     android:layout_height="0dp"
