design : Search - 리싸이클러뷰 크기 잠깐 수정

--- a/app/src/main/res/layout/fragment_pill_result.xml
+++ b/app/src/main/res/layout/fragment_pill_result.xml
@@ -5,9 +5,8 @@
     android:id="@+id/resultlist"
     android:name="com.blackcows.butakaeyak.ui.home.ResultsFragment"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    app:layoutManager="LinearLayoutManager"
     tools:context=".ui.home.PillResultFragment"
     tools:listitem="@layout/item_results" />
